[package]
name = "apds9960"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/apds9960-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the APDS9960 digital proximity, ambient light, RGB and gesture sensor."
readme = "README.md"
keywords = ["proximity", "light", "gesture", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/apds9960-rs"
documentation = "https://docs.rs/apds9960"
include = [
  "**/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"

[dev-dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal-mock = "0.10.0"

[profile.release]
lto = true
